Cambios Hechos, Imagen de Carga

--- a/ProyectoRuben/Login.xaml
+++ b/ProyectoRuben/Login.xaml
@@ -42,16 +42,14 @@
 
                 <StackPanel VerticalAlignment="Center" HorizontalAlignment="Center">
 
-                    <Image Source="/navbar-logo.png"
+                    <Image Source="/logo.png"
                            Width="170" Height="92" Margin="0,0,0,20"/>
 
                     <TextBlock Text="Usuario" FontSize="14" Margin="0,0,0,5"/>
-                    <TextBox x:Name="txtUsuario" Width="250" Height="30" Margin="0,0,0,15" Padding="5"/>
+                    <TextBox x:Name="txtUsuario" Width="250" Height="30" Margin="0,0,0,15" Padding="5" Style="{StaticResource MaterialDesignFilledTextBox}"/>
 
                     <TextBlock Text="Contraseña" FontSize="14" Margin="0,0,0,5"/>
-                    <PasswordBox x:Name="txtContraseña" Width="250" Height="30" Margin="0,0,0,15" Padding="5"/>
-
-                    <CheckBox x:Name="chkRecordar" Content="Recordar sesión" Margin="0,0,0,20"/>
+                    <PasswordBox x:Name="txtPassword" Width="250" Height="30" Margin="0,0,0,15" Padding="5" Style="{StaticResource MaterialDesignFilledRevealPasswordBox}"/>
 
                     <!-- Botón usando tu estilo del tema -->
                     <Button x:Name="btnLogin"
