--- a/ProyectoRuben/App.xaml
+++ b/ProyectoRuben/App.xaml
@@ -3,7 +3,7 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:local="clr-namespace:ProyectoRuben"
              xmlns:mat="http://materialdesigninxaml.net/winfx/xaml/themes"
-             StartupUri="MainWindow.xaml">
+             StartupUri="Login.xaml">
 
     <Application.Resources>
         <ResourceDictionary>
