--- a/ProyectoRuben/Login.xaml
+++ b/ProyectoRuben/Login.xaml
@@ -42,7 +42,7 @@
 
                 <StackPanel VerticalAlignment="Center" HorizontalAlignment="Center">
 
-                    <Image Source="/logo.png"
+                    <Image Source="/Recursos/Imagenes/logo.png"
                            Width="170" Height="92" Margin="0,0,0,20"/>
 
                     <TextBlock Text="Usuario" FontSize="14" Margin="0,0,0,5"/>
@@ -56,7 +56,8 @@
                             Content="Iniciar Sesión"
                             Height="40"
                             Style="{StaticResource PrimaryButton}"
-                            Click="btnLogin_Click" />
+                            Click="btnLogin_Click" 
+                            IsDefault="True"/>
 
                     <TextBlock x:Name="txtMensaje"
                                Foreground="{StaticResource ErrorBrush}"
