--- a/ProyectoRuben/App.xaml
+++ b/ProyectoRuben/App.xaml
@@ -2,8 +2,7 @@
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:local="clr-namespace:ProyectoRuben"
-             xmlns:mat="http://materialdesigninxaml.net/winfx/xaml/themes"
-             StartupUri="Login.xaml">
+             xmlns:mat="http://materialdesigninxaml.net/winfx/xaml/themes">
 
     <Application.Resources>
         <ResourceDictionary>
