--- a/ProyectoRuben/Frontend/AgregarReserva.xaml
+++ b/ProyectoRuben/Frontend/AgregarReserva.xaml
@@ -3,10 +3,62 @@
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:local="clr-namespace:ProyectoRuben.Frontend"
+        xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes"
         mc:Ignorable="d"
-        Title="AgregarReserva" Height="450" Width="800">
-    <Grid>
-        
+        Loaded="AgregarReserva_Loaded"
+        Title="Nueva Reserva" Height="450" Width="400"
+        WindowStartupLocation="CenterScreen" ResizeMode="NoResize"
+        TextElement.Foreground="{DynamicResource MaterialDesignBody}"
+        Background="{DynamicResource MaterialDesignPaper}">
+
+    <Grid Margin="20">
+        <StackPanel VerticalAlignment="Center">
+
+            <TextBlock Text="Crear Nueva Reserva" 
+                       Style="{StaticResource MaterialDesignHeadline5TextBlock}" 
+                       HorizontalAlignment="Center" Margin="0,0,0,10"/>
+
+            <ComboBox x:Name="ComboClientes"
+                      materialDesign:HintAssist.Hint="Seleccionar Cliente"
+                      Style="{StaticResource MaterialDesignFloatingHintComboBox}"
+                      DisplayMemberPath="Nombre" 
+                      SelectedValuePath="Id"/>
+
+            <ComboBox x:Name="ComboServicios"
+                      materialDesign:HintAssist.Hint="Seleccionar Servicio"
+                      Style="{StaticResource MaterialDesignFloatingHintComboBox}"
+                      DisplayMemberPath="Nombre" 
+                      SelectedValuePath="Id"/>
+
+            <Grid>
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition Width="*"/>
+                    <ColumnDefinition Width="10"/>
+                    <ColumnDefinition Width="*"/>
+                </Grid.ColumnDefinitions>
+
+                <DatePicker x:Name="PickerFecha"
+                            Grid.Column="0"
+                            materialDesign:HintAssist.Hint="Fecha"
+                            Style="{StaticResource MaterialDesignFloatingHintDatePicker}"/>
+
+                <materialDesign:TimePicker x:Name="PickerHora"
+                                           Grid.Column="2"
+                                           materialDesign:HintAssist.Hint="Hora"
+                                           Is24Hours="True"
+                                           Style="{StaticResource MaterialDesignFloatingHintTimePicker}"/>
+            </Grid>
+
+            <StackPanel Orientation="Horizontal" HorizontalAlignment="Right" Margin="0,20,0,0">
+                <Button Content="Cancelar" 
+                        Style="{StaticResource MaterialDesignFlatButton}" 
+                        IsCancel="True" Click="Cancelar_Click"/>
+
+                <Button Content="GUARDAR" 
+                        Style="{StaticResource MaterialDesignRaisedButton}" 
+                        Margin="10,0,0,0"
+                        IsDefault="True" Click="Guardar_Click"/>
+            </StackPanel>
+        </StackPanel>
     </Grid>
 </Window>
